# langchain_opal

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: Langchain_Data_Twingler_and_Virtuoso_Support_Agent_Demo.ipynb  ex1_OpalAssistantLLM.ipynb  ex2_OpalLLM.ipynb  ex3_ChatOpalAssistant.ipynb  ex4_ChatOpal.ipynb
langchain_opal/: __init__.py  chat_models.py  chat_models_assistant.py  llms.py  llms_assistant.py
