[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_opal"
version = "0.0.1"
description = "OpenLink Virtuoso OPAL Integration"
authors = [
  { name = "OpenLink Software", email = "support@openlinksw.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["LLM","data","devtools","index","retrieval"]
requires-python = ">=3.9,<4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules ",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "httpx",
  "langchain-core>=0.3.0,<0.4.0",
  # Add other dependencies here
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/OpenLinkSoftware/llama-index-llms-opal"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_opal*"]

